--- a/Dyanote/src/main/res/values/strings_activity_login.xml
+++ b/Dyanote/src/main/res/values/strings_activity_login.xml
@@ -1,5 +1,5 @@
 <resources>
-        <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -16,4 +16,6 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+
+    <string name="default_email">yourname@gmail.com</string>
 </resources>
