--- a/Dyanote/src/main/res/layout/fragment_edit.xml
+++ b/Dyanote/src/main/res/layout/fragment_edit.xml
@@ -8,9 +8,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".EditNoteActivity$PlaceholderFragment">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/editor"
+        android:layout_alignRight="@+id/saveButton"
+        android:layout_above="@+id/saveButton" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save_button_text"
+        android:id="@+id/saveButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
