--- a/Dyanote/src/main/res/layout/fragment_main.xml
+++ b/Dyanote/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,16 @@
 
     <TextView
         android:id="@+id/section_label"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/editButton" />
+
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/edit_button_text"
+        android:id="@+id/editButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
