--- a/Dyanote/src/main/res/values/rest_service.xml
+++ b/Dyanote/src/main/res/values/rest_service.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="login_url">http://dyanote.herokuapp.com/api/oauth2/access_token/</string>
-    <string name="pages_url">http://dyanote.herokuapp.com/api/users/%s/pages/</string>
+    <string name="pages_url" formatted="false">http://dyanote.herokuapp.com/api/users/%s/pages/</string>
+    <string name="page_url" formatted="false">http://dyanote.herokuapp.com/api/users/%s/pages/%d/</string>
     <string name="client_id">f5c9142798c20c8d9974</string>
     <string name="client_secret">670ffd8e800bc2ab9716446662eae7bdad74bfb3</string>
 </resources>
