--- a/Dyanote/src/main/res/layout/fragment_edit.xml
+++ b/Dyanote/src/main/res/layout/fragment_edit.xml
@@ -13,7 +13,8 @@
         android:layout_height="fill_parent"
         android:id="@+id/editor"
         android:layout_alignRight="@+id/saveButton"
-        android:layout_above="@+id/saveButton" />
+        android:layout_above="@+id/saveButton"
+        android:gravity="left|top" />
 
     <Button
         android:layout_width="wrap_content"
