--- a/Dyanote/src/main/res/values/styles.xml
+++ b/Dyanote/src/main/res/values/styles.xml
@@ -12,4 +12,24 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="HeaderText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#002f2f</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="LinkText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#07a3d4</item>
+    </style>
+
+    <style name="BoldText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ItalicText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
 </resources>
