--- a/Dyanote/src/main/res/layout/fragment_view.xml
+++ b/Dyanote/src/main/res/layout/fragment_view.xml
@@ -13,7 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@+id/editButton"
-        android:lineSpacingExtra="5dp" />
+        android:lineSpacingExtra="5dp"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
