--- a/Dyanote/src/main/res/values/styles.xml
+++ b/Dyanote/src/main/res/values/styles.xml
@@ -14,8 +14,9 @@
 
     <style name="HeaderText" parent="@android:style/TextAppearance">
         <item name="android:textColor">#002f2f</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:lineSpacingExtra">10sp</item>
     </style>
 
     <style name="LinkText" parent="@android:style/TextAppearance">
