--- a/Dyanote/src/main/res/values/styles.xml
+++ b/Dyanote/src/main/res/values/styles.xml
@@ -2,8 +2,29 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="DyanoteTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowBackground">@color/dyanote_yellow_light</item>
+        <item name="android:actionBarItemBackground">@color/dyanote_green</item>
+
+        <!-- ActionBar -->
+        <item name="android:actionBarStyle">@style/DyanoteActionBar</item>
+        <item name="actionBarStyle">@style/DyanoteActionBar</item> <!-- Support library compatibility -->
+        <item name="android:actionBarTabTextStyle">@style/DyanoteActionBar</item>
+        <item name="actionBarTabTextStyle">@style/DyanoteActionBar</item> <!-- Support library compatibility -->
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="DyanoteActionBar"
+        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/dyanote_green</item>
+        <!-- Support library compatibility -->
+        <item name="background">@color/dyanote_green</item>
+    </style>
+
+    <style name="DyanoteActionBarTitleText"
+        parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/dyanote_yellow</item>
+        <!-- The textColor property is backward compatible with the Support Library -->
     </style>
 
     <style name="LoginFormContainer">
@@ -12,15 +33,16 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <!-- TextView formatting color styles -->
     <style name="HeaderText" parent="@android:style/TextAppearance">
-        <item name="android:textColor">#002f2f</item>
+        <item name="android:textColor">@color/dyanote_green</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:lineSpacingExtra">10sp</item>
     </style>
 
     <style name="LinkText" parent="@android:style/TextAppearance">
-        <item name="android:textColor">#07a3d4</item>
+        <item name="android:textColor">@color/dyanote_blue</item>
     </style>
 
     <style name="BoldText" parent="@android:style/TextAppearance">
